# 7A35T_Arty_RemoteLedControl

./: .gitignore  LICENSE  README.md
fpga/hw_system/: Makefile  create_workspace.tcl  hw_system.tcl  implement_hw_system.tcl
fpga/hw_system/ip_repo/massive_pwm_1.0/: component.xml
fpga/hw_system/ip_repo/massive_pwm_1.0/drivers/massive_pwm_v1_0/data/: massive_pwm.mdd  massive_pwm.tcl
fpga/hw_system/ip_repo/massive_pwm_1.0/drivers/massive_pwm_v1_0/src/: Makefile  massive_pwm.c  massive_pwm.h  massive_pwm_selftest.c
fpga/hw_system/ip_repo/massive_pwm_1.0/example_designs/bfm_design/: design.tcl  massive_pwm_v1_0_tb.v
fpga/hw_system/ip_repo/massive_pwm_1.0/example_designs/debug_hw_design/: design.tcl  massive_pwm_v1_0_hw_test.tcl
fpga/hw_system/ip_repo/massive_pwm_1.0/hdl/: massive_pwm_v1_0.v  massive_pwm_v1_0_S00_AXI.v
fpga/hw_system/ip_repo/massive_pwm_1.0/xgui/: massive_pwm_v1_0.tcl
fpga/hw_system/src/: bootloader_bsp.mss  hw_system_bd.tcl  system.mss  system.xdc
fpga/sw_system/: CMakeLists.txt  download_bitfile.tcl  main.c  run_elf.tcl
fpga/sw_system/scripts/: lscript.ld
fpga/sw_system/src/: .gitignore  lcd.c  main.c  openat_server.c  openat_server.h  platform.c  pwm.c  pwm.h  remote.c  remote.h  server.c  server.h  utils.c  utils.h  vaxi_os.c  wifi_uart.c.bak
fpga/sw_system/src/board_rgb_leds/: CMakeLists.txt  board_rgb_leds.c  board_rgb_leds.h  board_rgb_leds_cmd.c  board_rgb_leds_cmd.h  board_rgb_leds_resource.c  board_rgb_leds_resource.h
fpga/sw_system/src/file_loader/: CMakeLists.txt  file_loader.c  file_loader.h
fpga/sw_system/src/platform/: CMakeLists.txt  platform.c  platform_config.h
fpga/sw_system/src/rgb_leds/: CMakeLists.txt  rgb_leds.c  rgb_leds.h  rgb_leds_resource.c  rgb_leds_resource.h
fpga/sw_system/src/scheduler/: scheduler.c  scheduler.h
fpga/sw_system/src/server/: CMakeLists.txt  server.c  server.h
fpga/sw_system/src/usb_uart/: CMakeLists.txt  usb_uart.c  usb_uart.h
fpga/sw_system/src/utils/: CMakeLists.txt  colors.c  colors.h
fpga/sw_system/src/web_loader/: CMakeLists.txt  web_loader.c  web_loader.h  web_loader_data.h
html/: compile_web_loader.py  index.html  web_loader.html
html/css/: style.css
html/js/: engine.js
